fixed z-index-issue

--- a/app/util/wrapper/wrapper.scss
+++ b/app/util/wrapper/wrapper.scss
@@ -14,7 +14,7 @@
     justify-content: center;
   }
 
-  canvas: {
+  canvas {
     position: relative;
     z-index: 999;
   }
